--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <parent>
         <groupId>org.apache.sling</groupId>
         <artifactId>sling</artifactId>
-        <version>20</version>
+        <version>22</version>
     </parent>
 
     <artifactId>org.apache.sling.sample.slingshot</artifactId>
@@ -51,11 +51,6 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
-                        <!-- node types to be created -->
-                        <Sling-Nodetypes>
-                            SLING-INF/nodetypes/slingshot.cnd
-                        </Sling-Nodetypes>
-
                         <!-- initial content to be loaded on bundle installation -->
                         <Sling-Initial-Content>
                             SLING-INF/content/slingshot;overwrite:=true;path:=/slingshot;maven:mount:=false,
@@ -112,13 +107,25 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.api</artifactId>
-            <version>2.3.0</version>
+            <version>2.8.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.scripting.jsp.taglib</artifactId>
             <version>2.0.6</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.jcr.base</artifactId>
+            <version>2.2.2</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.jackrabbit</groupId>
+            <artifactId>jackrabbit-api</artifactId>
+            <version>2.0.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
