--- a/tooling/support/slingstart-model/pom.xml
+++ b/tooling/support/slingstart-model/pom.xml
@@ -64,5 +64,9 @@
             <version>1.2.8</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+        	<groupId>junit</groupId>
+        	<artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 </project>
