--- a/tooling/maven/slingstart-maven-plugin/pom.xml
+++ b/tooling/maven/slingstart-maven-plugin/pom.xml
@@ -85,7 +85,7 @@
     <dependencies>
        <dependency>
            <groupId>org.apache.sling</groupId>
-           <artifactId>org.apache.sling.slingstart.model</artifactId>
+           <artifactId>org.apache.sling.provisioning.model</artifactId>
            <version>0.1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
