--- a/eclipse-test/pom.xml
+++ b/eclipse-test/pom.xml
@@ -111,7 +111,7 @@
                         <artifactItem>
                             <groupId>org.apache.sling</groupId>
                             <artifactId>org.apache.sling.launchpad</artifactId>
-                            <version>7-SNAPSHOT</version>
+                            <version>7</version>
                             <type>war</type>
                             <overWrite>false</overWrite>
                             <outputDirectory>${project.build.directory}</outputDirectory>
