--- a/contrib/extensions/replication/core/pom.xml
+++ b/contrib/extensions/replication/core/pom.xml
@@ -210,6 +210,11 @@
             <version>2.6.2</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.jackrabbit</groupId>
+            <artifactId>jackrabbit-api</artifactId>
+            <version>2.6.2</version>
+        </dependency>
         <!-- COMMONS -->
         <dependency>
             <groupId>commons-io</groupId>
@@ -217,6 +222,7 @@
             <version>2.4</version>
             <scope>provided</scope>
         </dependency>
+
     </dependencies>
     <reporting>
         <plugins>
