--- a/testing/resourceresolver-mock/pom.xml
+++ b/testing/resourceresolver-mock/pom.xml
@@ -65,6 +65,12 @@
             <version>2.8.0</version>
             <scope>provided</scope>
         </dependency>
+         <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.commons.json</artifactId>
+            <version>2.0.8</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.compendium</artifactId>
