--- a/samples/slingshot/pom.xml
+++ b/samples/slingshot/pom.xml
@@ -128,5 +128,14 @@
             <version>2.0.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+        	<groupId>javax.jcr</groupId>
+        	<artifactId>jcr</artifactId>
+        	<version>2.0</version>
+        </dependency>
+        <dependency>
+        	<groupId>org.slf4j</groupId>
+        	<artifactId>slf4j-api</artifactId>
+        </dependency>
     </dependencies>
 </project>
