--- a/tooling/ide/eclipse-core/build.properties
+++ b/tooling/ide/eclipse-core/build.properties
@@ -2,7 +2,8 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                .options,\
-               plugin.xml
+               plugin.xml,\
+               OSGI-INF/
 jars.compile.order = .,\
                      commons-httpclient.jar
 source.. = src/
