--- a/pom.xml
+++ b/pom.xml
@@ -59,16 +59,17 @@
         </plugins>
     </reporting>
     <dependencies>
-         <dependency>
+        <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.api</artifactId>
-            <version>2.8.0</version>
+            <!-- TODO: resarch why unit tests fail on InputStream tests with Sling API < 2.7.0 -->
+            <!--version>2.4.0</version-->
+            <version>2.7.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.compendium</artifactId>
-            <version>4.3.0</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
