--- a/pom.xml
+++ b/pom.xml
@@ -62,9 +62,7 @@
         <dependency>
             <groupId>org.apache.sling</groupId>
             <artifactId>org.apache.sling.api</artifactId>
-            <!-- TODO: resarch why unit tests fail on InputStream tests with Sling API < 2.7.0 -->
-            <!--version>2.4.0</version-->
-            <version>2.7.0</version>
+            <version>2.4.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -95,5 +93,53 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+    
+    <!-- Profiles to run unit tests against different Sling API versions -->
+    <profiles>
+        <profile>
+            <id>api-2.5</id>
+            <dependencies>
+            <dependency>
+                <groupId>org.apache.sling</groupId>
+                <artifactId>org.apache.sling.api</artifactId>
+                <version>2.5.0</version>
+                <scope>provided</scope>
+            </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>api-2.6</id>
+            <dependencies>
+            <dependency>
+                <groupId>org.apache.sling</groupId>
+                <artifactId>org.apache.sling.api</artifactId>
+                <version>2.6.0</version>
+                <scope>provided</scope>
+            </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>api-2.7</id>
+            <dependencies>
+            <dependency>
+                <groupId>org.apache.sling</groupId>
+                <artifactId>org.apache.sling.api</artifactId>
+                <version>2.7.0</version>
+                <scope>provided</scope>
+            </dependency>
+            </dependencies>
+        </profile>
+        <profile>
+            <id>api-2.8</id>
+            <dependencies>
+            <dependency>
+                <groupId>org.apache.sling</groupId>
+                <artifactId>org.apache.sling.api</artifactId>
+                <version>2.8.0</version>
+                <scope>provided</scope>
+            </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
     
 </project>
